--- a/scss/sections/__faq.scss
+++ b/scss/sections/__faq.scss
@@ -161,7 +161,7 @@
         }
 
         @media screen and (max-width: 400px){
-            margin-top: -20px;
+            margin-top: -14px;
         }
 
         &:after {
